# fzseek

./: .$fzseek.drawio.bkp  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  default_config.toml  default_config.yaml  fzseek.drawio  things2do.md
docs/: architecture.md
src/: main.rs
